Prevent ccm to corrupt cassandra-env.sh